# clone-gpt

./: app.py  pyproject.toml
static/src/css/: input.css
templates/: index.html
